--- a/rds.bib
+++ b/rds.bib
@@ -31,6 +31,13 @@
   publisher={Wiley Online Library}
 }
 
+@article{gjoka2009walk,
+  title={A walk in facebook: Uniform sampling of users in online social networks},
+  author={Gjoka, Minas and Kurant, Maciej and Butts, Carter T and Markopoulou, Athina},
+  journal={arXiv preprint arXiv:0906.0060},
+  year={2009}
+}
+
 @article{gile2010respondent,
   title={RESPONDENT-DRIVEN SAMPLING: AN ASSESSMENT OF CURRENT METHODOLOGY},
   author={Gile, Krista J and Handcock, Mark S},
@@ -53,15 +60,6 @@
   publisher={Mass Medical Soc}
 }
 
-@inproceedings{singla2008yes,
-  title={Yes, there is a correlation:-from social networks to personal behavior on the web},
-  author={Singla, Parag and Richardson, Matthew},
-  booktitle={Proceedings of the 17th international conference on World Wide Web},
-  pages={655--664},
-  year={2008},
-  organization={ACM}
-}
-
 @article{pollard2013adolescent,
   title={Adolescent Friendship Networks and Trajectories of Binge Drinking},
   author={Pollard, Michael and Green, Harold D and Kennedy, David P and Go, Myong-Hyun and Tucker, Joan S},
@@ -69,12 +67,13 @@
   publisher={RAND Working Paper Series WR-998}
 }
 
-@book{bremaud2013markov,
-  title={Markov chains: Gibbs fields, Monte Carlo simulation, and queues},
-  author={Br{\'e}maud, Pierre},
-  volume={31},
-  year={2013},
-  publisher={Springer Science \& Business Media}
+@inproceedings{singla2008yes,
+  title={Yes, there is a correlation:-from social networks to personal behavior on the web},
+  author={Singla, Parag and Richardson, Matthew},
+  booktitle={Proceedings of the 17th international conference on World Wide Web},
+  pages={655--664},
+  year={2008},
+  organization={ACM}
 }
 
 @inproceedings{kauffmann2007measurement,
@@ -86,10 +85,45 @@
   organization={IEEE}
 }
 
+@book{bremaud2013markov,
+  title={Markov chains: Gibbs fields, Monte Carlo simulation, and queues},
+  author={Br{\'e}maud, Pierre},
+  volume={31},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
+
+
 @misc{Senate,
   title = {Computer Science University of Maryland},
   howpublished = {\url{http://www.cs.umd.edu/hcil/science20}},
   note = {Accessed: 2015-08-07}
 }
+
+@misc{GEPHI,
+  title = {Gephi - The Open Graph Viz Platform},
+  howpublished = {\url{http://gephi.github.io/}},
+}
+
+@misc{Project90,
+  title = {The Office of Population Research at Princeton University},
+  howpublished = {\url{https://opr.princeton.edu/archive/p90/}},
+  note = {Accessed: 2015-07-01}
+}
+
+@misc{Addhealth,
+  title = {The National Longitudinal Study of Adolescent to Adult Health},
+  howpublished = {\url{http://www.cpc.unc.edu/projects/addhealth}},
+  note = {Accessed: 2015-07-01}
+}
+
+@misc{Facebook,
+  title = {Stanford Large Network Dataset Collection},
+  howpublished = {\url{https://snap.stanford.edu/data/}},
+  note = {Accessed: 2015-07-01}
+}
+
+
 
 
