--- a/rds.bib
+++ b/rds.bib
@@ -124,6 +124,12 @@
   note = {Accessed: 2015-07-01}
 }
 
+@misc{Addhealth2,
+  title = {Linton C. Freeman, Research Professor, Department of Sociology and Institute for Mathematical Behavioral Sciences
+School of Social Sciences, University of California, Irvine},
+  howpublished = {\url{http://moreno.ss.uci.edu/data.html}},
+  note = {Accessed: 2015-07-01}
+}
 
 
 
