--- a/rds.bib
+++ b/rds.bib
@@ -67,6 +67,29 @@
   publisher={RAND Working Paper Series WR-998}
 }
 
+@article{ramirez2005networks,
+  title={From networks to populations: the development and application of respondent-driven sampling among IDUs and Latino gay men},
+  author={Ramirez-Valles, Jesus and Heckathorn, Douglas D and V{\'a}zquez, Raquel and Diaz, Rafael M and Campbell, Richard T},
+  journal={AIDS and Behavior},
+  volume={9},
+  number={4},
+  pages={387--402},
+  year={2005},
+  publisher={Springer}
+}
+
+@article{musyoki2015prevalence,
+  title={Prevalence of HIV, Sexually Transmitted Infections, and Risk Behaviours Among Female Sex Workers in Nairobi, Kenya: Results of a Respondent Driven Sampling Study},
+  author={Musyoki, Helgar and Kellogg, Timothy A and Geibel, Scott and Muraguri, Nicholas and Okal, Jerry and Tun, Waimar and Raymond, H Fisher and Dadabhai, Sufia and Sheehy, Meredith and Kim, Andrea A},
+  journal={AIDS and Behavior},
+  volume={19},
+  number={1},
+  pages={46--58},
+  year={2015},
+  publisher={Springer}
+}
+
+
 @inproceedings{singla2008yes,
   title={Yes, there is a correlation:-from social networks to personal behavior on the web},
   author={Singla, Parag and Richardson, Matthew},
@@ -83,6 +106,12 @@
   pages={1451--1459},
   year={2007},
   organization={IEEE}
+}
+@inproceedings{heckathorn2003jazz,
+  title={Jazz networks: Using respondent-driven sampling to study stratification in two jazz musician communities},
+  author={Heckathorn, Douglas D and Jeffri, Joan},
+  booktitle={Unpublished paper presented at American Sociological Association Annual Meeting},
+  year={2003}
 }
 
 @book{bremaud2013markov,
